snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.md5
ecc7f3dc67e4212d1ba80ea927ec8deb